[package]
name = "mev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }
dotenv = "0.15.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
eyre = { version = "0.6" }